style.css
@import url('https://fonts.googleapis.com/css2?family=Mr+Dafoe&family=Mulish:wght@400;700;900&family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap');

* {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

.fluid-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 30px 90px;
}

/* Dark Mode */
body {
    font-family: 'Nunito Sans', sans-serif;
    color: #EEEEEE;
    background-color: #232931;
    overflow-x: hidden;
    margin: 0;
}

h1 {
    font-size: 38px;
    font-weight: 500;
}

/* Navigation */
nav {
    display: flex;
    justify-content: space-between;
    height: 150px;
}

nav h2 {
    display: flex;
    align-items: center;
    margin-left: 80px;
}
.light-mode.name-logo h2 {
    color: #232931;
}

.name-logo h2 {
    color: #EEEEEE;
    margin-left: 40px;
    transition: border-bottom 0.3s ease;
}

.light-mode.name-logo h2:hover {
    border-bottom: 2px solid transparent;
    border-color: #232931;
}

.name-logo h2:hover {
    border-bottom: 2px solid transparent;
    border-color: #EEEEEE;
}

.navbar ul {
    display: flex;
    justify-content: center;
    align-items: center;
    list-style: none;
    margin-right: 30px;
}

.navbar a {
    transition: color 0.4s ease;
    font-size: 18px;
    display: flex;
    align-items: center;
    margin-right: 70px;
    font-weight: 500;
    text-decoration: none;
    color: #c3cddddb;
}

.navbar .name-logo {
  margin-left: 0;
}

.navbar a:hover {
    color: #EEEEEE;
}

.navbar img {
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #232931;
    border-color: #EEEEEE;
    width:50px;
}

/* Banner */
header {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 30px 40px;
  gap: 70px;
}

header img {
    width: 500px;
}

.header-text {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    margin-bottom: 150px;
    width: 500px;
}

.light-mode.header-text {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    margin-bottom: 150px;
    width: 500px;
}

.header-text button {
    border-radius: 30px;
    border: none;
    padding: 1.5rem 2rem;
    margin: 5px;
    text-decoration: none;
    background: #EEEEEE;
    color: #232931;
    font-family: 'Mulish', sans-serif;
    font-weight: 600;
    font-size: 1.1rem;
    cursor: pointer;
    transition: 0.4s ease;
}

.header-text button a:link {
    text-decoration: none;
    color: #232931;
}

.header-text button a:visited {
    text-decoration: none;
    color: #232931;
}

.header-text button:hover {
    color: #EEEEEE;
    background: #7AC7C4;
}

main {
    display: flex;
    justify-content: center;
    margin: 0 40px;
}

.main-container {
    display: flex;
    justify-content: center;
}

.main-text-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    width: 60%;
    padding: 120px;
    margin-right: 60px;
    text-align: left;
    background-color: #EEEEEE;
    border-radius: 40px;
    color: #232931
}

.main-text-container h2 {
    font-size: 32px;
}

.main-text-container .about-page {
  margin: 0 auto;
}

.main-text-container p {
    font-size: 22px;
}

.main-text-container img {
  width: 100px;
  border-radius: 50%;
  margin: 5px auto;
}

.main-experience-container {
    width: 40%;
    padding: 50px 50px;
    justify-content: center;
}

.main-experience-container h2 {
    text-align: center;
}

.main-experience-container ul {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 9px;
    margin: 0;
    padding: 0;
}

.main-experience-container li {
  display: flex;
  gap: 10px;
  font-weight: 800;
  font-size: 28px;
}

.main-experience-container img {
  width: 50px;
}

.project-previews {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 80%;
  text-align: center;
}

.project-previews div ul {
  list-style: none;
}

.project-previews div p {
  font-size: 22px;
}

.image {
  width: 400px;
  height: 200px;
  border-radius: 15px;
}

/* Light Mode */
.light-mode {
  background-color: #eeeeee;
  color: #232931;
}

.light-mode.navbar a {
  transition: color 0.4s ease;
  font-size: 18px;
  display: flex;
  align-items: center;
  margin-right: 70px;
  font-weight: 500;
  text-decoration: none;
  color: #232931ae;
}

.light-mode.navbar a:hover {
  color: #232931;
}

.light-mode.navbar a:visited {
  color: #232931ae;
}

.light-mode.navbar img {
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #eeeeee;
  border-color: #232931;
  width: 50px;
}

.light-mode.header-text button {
  border-radius: 30px;
  border: none;
  padding: 1.5rem 2rem;
  margin: 5px;
  text-decoration: none;
  background: #232931;
  color: #eeeeee;
  font-family: "Mulish", sans-serif;
  font-weight: 600;
  font-size: 1.1rem;
  cursor: pointer;
  transition: 0.4s ease;
}

.light-mode.header-text button a:link {
  text-decoration: none;
  color: #eeeeee;
}

.light-mode.header-text button a:visited {
  text-decoration: none;
  color: #eeeeee;
}

.light-mode.header-text button:hover {
  color: #eeeeee;
  background: #7ac7c4;
}

.light-mode.main-text-container {
  display: flex;
  flex-direction: column;
  width: 60%;
  padding: 120px;
  margin-right: 60px;
  text-align: left;
  background-color: #232931;
  border-radius: 40px;
  color: #eeeeee;
}

/* Footer */
footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #eeeeee00;
  color: #989898;
  margin-top: 50px;
  padding: 30px;
}

footer .links {
  text-align: center;
}

footer a {
  color: #00000043;
  background-color: deepskyblue;
  border-radius: 10px;
  padding: 6px 10px;
  text-decoration: none;
  transition: 0.5s ease;
  margin: 3px;
}

footer a:visited {
  color: #00000043;
}

footer a:hover {
  background-color: coral;
}

/* Mobile Response */
@media only screen and (max-width: 1000px) {
  .fluid-container {
    justify-content: center;
    align-items: center;
    margin: 0;
  }

  nav ul li {
    display: none;
  }

  html {
    overflow-x: hidden;
  }

  .light-mode body {
    margin: 0;
    overflow-x: hidden;
  }

  body {
    margin: 20px 0;
    overflow-x: hidden;
  }

  header {
    flex-direction: column;
    margin-right: 40px;
    gap: 0;
  }

  header button {
    width: 98%;
  }

  header img {
    width: 391px;
    gap: 0;
  }

  .header-text {
    width: 90%;
    margin: 0;
    text-align: center;
    justify-content: center;
    align-items: center;
  }

  .light-mode.header-text {
    width: 90%;
    margin: 0;
    text-align: center;
    justify-content: center;
    align-items: center;
  }

  .main-container {
    width: 100%;
    flex-direction: column;
  }

  .light-mode.main-text-container {
    width: 100%;
    margin: 0;
    padding: 15%;
    border-radius: 10px;
    align-items: center;
    justify-content: center;
  }

  .main-text-container {
    width: 100%;
    margin: 0;
    padding: 15%;
    border-radius: 10px;
    align-items: center;
  }

  .main-text-container h2, p {
    text-align: center;
  }

  .main-experience-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 5px;
    width: 100%;
    padding: 20px 0 0 0;
} 

.main-experience-container img {
    width: 40px;
}

.project-previews {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: 50px;
}

.image {
    width: 600px;
    height: 300px;
    border-radius: 15px;
  }

  .image {
    width: 380px;
    height: 220px;
  }

  footer {
    margin: 0;
  }

  footer a {
    margin: 5px 0;
  }
}

